-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.0
-
-
4ed01f5d23320f57ab72ae62cd1592828d7d023c (qt/qtbase/dev) 300b862aa574f0955ecf4a7c0bfb1a9d15d240cc (qt/qtbase/5.15)
When using the network with a multithreaded build of Qt then it can have a problem after the first request. After the first request any follow up ones can fail with:
QIODevice::read (QNetworkReplyWasmImpl): device not open
This might be a problem with the 1.39.8 compiler as it is reportedly working with the 1.39.16 one.
| For Gerrit Dashboard: QTBUG-85176 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 305838,2 | wasm: do not close QIODevice on error | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 305916,2 | wasm: do not close QIODevice on error | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |