wasm: do not close QIODevice on error

Closing it early means the user may get this message when reading data
without checking for error:
'QIODevice::read (QNetworkReplyWasmImpl): device not open'

Change-Id: I377fc3da68e9d9f14f8504ace5addbb4f8e3c539
Fixes: QTBUG-85176
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 4ed01f5d23320f57ab72ae62cd1592828d7d023c)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>